{
    "name": "Player Input",
    "maps": [
        {
            "name": "PlayerInteraction",
            "id": "fc310c59-04d6-4929-a855-2c8c1e9523c6",
            "actions": [
                {
                    "name": "ShowMenu",
                    "type": "Button",
                    "id": "0b3272b1-2236-4b7f-b3c6-4981561c6387",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "054d728c-1fb5-483a-ac8c-c196809fe499",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ShowMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Base Player Movement",
            "id": "924fcd8c-8bd2-4235-abe2-45c725172a5b",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "cf49a117-4ff4-4617-bd0f-4fdf9ad630b7",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement Modifiers",
                    "type": "Button",
                    "id": "bcbba67b-7cbd-41cd-99f1-ef74cdd606a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash Movement",
                    "type": "Button",
                    "id": "bbd3d0de-5c5b-49ea-b7df-bbfbc8e0a450",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DashReading",
                    "type": "PassThrough",
                    "id": "385f0524-e241-4e85-9f0e-8cf41a333bdc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "c9e963e4-e0d2-4e5a-98c5-dc792269139e",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "619cf8bc-35e8-4d46-a0cd-a7edcba86cab",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "de4257c5-9574-4d67-bbcb-ce5abc09b7c5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "fe974fcf-323f-45c7-8e85-24b562aad8e6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "439a2d9f-e12b-45a1-b03d-ce451cb02b21",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b5e94c5b-576a-4a89-9088-df47c235bd07",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Hold(duration=0.25,pressPoint=0.25)",
                    "processors": "",
                    "groups": "",
                    "action": "Movement Modifiers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Dash Vector",
                    "id": "ba5f1d67-791a-4b4e-9a7c-209e78fa47ec",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashReading",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3006bf49-a64d-47bc-b718-83f6af6265cf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashReading",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4197e835-45fc-45d2-a18a-124f82a3dd4d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashReading",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ab7d3472-96f7-4120-85bd-225278c3d03f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashReading",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "082adad9-e7fa-41ec-95ca-d1c9cd3e19b2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashReading",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "12f3e2cc-9506-4f19-b016-3c843e898311",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerAttack",
            "id": "50ff9ac7-f556-418d-ace2-43ac0f970f89",
            "actions": [
                {
                    "name": "Primary Attack",
                    "type": "Button",
                    "id": "30e8abb0-54b2-4f06-b815-cac8d8f83a30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Secondary Attack",
                    "type": "Button",
                    "id": "7efce37b-30cd-46a9-bc91-1250a362a38a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Third Attack",
                    "type": "Button",
                    "id": "ffe18392-07f1-43c6-9bb1-74e9cb75634c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelAttack",
                    "type": "Button",
                    "id": "55a1674a-a349-4f4b-a957-0e2928f8ea2e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e70e226c-d24c-4116-ba67-065be466682d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Primary Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c093973a-7323-47e6-9eaa-92018b086950",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Secondary Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "443aa6a3-ee0f-45cd-84a0-c20a21d9d1eb",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Third Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8658800a-7368-4e8a-a60f-d25ae4dfb9b5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "StoryMenu",
            "id": "096330d9-7cdd-4f08-b000-0fba19ad26a4",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "d5840965-3c9e-4819-a452-de8dc3ba4390",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EndStory",
                    "type": "Button",
                    "id": "d5feac9c-f4e9-4d43-9211-ef77b103a116",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c67c9b3e-3376-4a78-806c-c75d62ec29b1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a68a70c5-28cb-4c87-9fb0-190fbb615b0c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EndStory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}